[package]
name = "fdb-ch-proto-export"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tokio = {version = "1.4.0", features = ["full"] }
log = "0.4.14"
tracing = { version = "0.1" }
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tonic = "0.4"
prost = "0.7.0"
prost-types = "0.7.0"
protofish = "0.4.0"
foundationdb = "0.5"
confy = "0.3.1"
clickhouse = "0.7"
os_type = "2.3"
structopt = { version = "0.3", default-features = false }
lazy_static = "1.4.0"
futures = "0.3"

[build-dependencies]
tonic-build = "0.4"