[package]
name = "fdb-ch-proto-export"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tokio = {version = "1.4.0", features = ["full"] }
log = "0.4.14"
tracing = { version = "0.1" }
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }
tonic = "0.4"
prost = "0.7.0"
prost-types = "0.7.0"
foundationdb = "0.5"
confy = "0.3.1"
os_type = "2.3"
structopt = { version = "0.3", default-features = false }
lazy_static = "1.4.0"
protofish = { git = "https://github.com/Rantanen/protofish.git", rev = "90e2468d7383f5f67166b57e50f106ca3ee761a7" }
futures = "0.3"
regex = "1"
dyn-fmt = "0.3.0"
tokio-postgres = "0.7.5"
chrono = "0.4.19"

[build-dependencies]
tonic-build = "0.4"